--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "build:editor": "webpack --mode development",
+    "build:editor": "webpack --mode production",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
