Prepare for publish

--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
       "android",
       "web"
     ],
+    "entryPoint": "node_modules/expo/AppEntry.js",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
