--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@rmccue/sfsymbols": "^0.0.2",
     "react-native-keyboard-accessory": "^0.1.10",
     "tinymce": "^5.1.5"
   },
